<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.kie.kogito</groupId>
  <artifactId>java-flow-example</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
    <kogito.bom.group-id>org.kie.kogito</kogito.bom.group-id>
    <kogito.bom.artifact-id>kogito-bom</kogito.bom.artifact-id>
    <kogito.bom.version>2.0.0-SNAPSHOT</kogito.bom.version>
    <maven.compiler.release>11</maven.compiler.release>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <version.formatter.plugin>2.13.0</version.formatter.plugin>
    <version.impsort.plugin>1.8.0</version.impsort.plugin>
    <formatter.goal>format</formatter.goal>
    <impsort.goal>sort</impsort.goal>
    <encoding>UTF-8</encoding>
  </properties>
   <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${kogito.bom.group-id}</groupId>
        <artifactId>${kogito.bom.artifact-id}</artifactId>
        <version>${kogito.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
       <groupId>org.kie.kogito</groupId>
       <artifactId>kogito-serverless-workflow-builder</artifactId>  
    </dependency>
  </dependencies>
  <build>
  	<plugins>
  	<plugin>
          <groupId>net.revelc.code.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>${version.formatter.plugin}</version>
          <configuration>
            <configFile>src/main/resources/eclipse-format.xml</configFile>
            <lineEnding>LF</lineEnding>
            <encoding>${encoding}</encoding>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>${formatter.goal}</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        
        <plugin>
          <groupId>net.revelc.code</groupId>
          <artifactId>impsort-maven-plugin</artifactId>
          <version>${version.impsort.plugin}</version>
          <configuration>
            <!-- keep in sync with kogito-build/kogito-ide-config/src/main/resources/eclipse.importorder -->
            <groups>java.,javax.,org.,com.,io.</groups>
            <staticGroups>*</staticGroups>
            <staticAfter>true</staticAfter>
            <removeUnused>true</removeUnused>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>${impsort.goal}</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
  	</plugins>
  </build>
</project>